# readings

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: simple.rs
probe/: CHANGELOG.md  Cargo.toml
probe/examples/: global.rs  jemalloc.rs  simple.rs
probe/src/: alloc.rs  global.rs  lib.rs  linux.rs  macos.rs  windows.rs
src/: lib.rs  macos.rs
