[package]
name = "readings"
version = "0.1.1"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Graph vital metrics process logging"
repository = "https://github.com/kali/readings"
keywords = [ "Profiling", "Auditing", ]
categories = [ "development-tools::profiling" ]

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
clap = "2"
plotters = "0.2"
