[package]
name = "readings-probe"
version = "0.1.3"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Probe for vital metrics process logging"
repository = "https://github.com/kali/readings"
keywords = [ "Profiling", "Auditing", ]
categories = [ "development-tools::profiling" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
libc = "0.2.68"
num_cpus = "1.12.0"
thiserror = "1.0.13"

[dev-dependencies]
jemallocator = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi"]}
